# panda3d-rest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/modules/: FindCython.cmake  UseCython.cmake
examples/: 01-json-get.py
panda3d_rest/: __init__.py  http.py  request.py
src/: CMakeLists.txt  config_rest.pyx  http.pyx  request.pyx  rest.pyx
